# ollama-mcp-bridge

./: .dockerignore  .gitignore  CI.md  Dockerfile  README.md  api.py  docker-compose.yml  main.py  mcp-config.json  mcp_manager.py  pyproject.toml  test_api.py  test_unit.py  utils.py
.github/workflows/: build_and_push_docker_image.yml  dry-run.yml  publish.yml  release.yml  test-publish.yml  test-pypi-publish.yml  test.yml
mcp-servers-config/: mcp-config.json
services/: __init__.py  proxy_service.py
src/ollama_mcp_bridge/: __init__.py  _version.py  api.py  lifecycle.py  main.py  mcp_manager.py  proxy_service.py  utils.py
tests/: __init__.py  test_api.py  test_env_expansion.py  test_error_handling.py  test_ollama_proxy_timeout_env.py  test_unit.py
